layout base implementado

--- a/index.html
+++ b/index.html
@@ -19,6 +19,57 @@
         <h1>PARROT CARD GAME</h1>
     </div>
 
+    <ul>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+        <li class="card">
+            <img src="images/front 6.png" alt="parrot card">
+        </li>
+
+    </ul>
 
     <script src="script.js"></script>
 </body>
