prompt em loop até número válido

--- a/index.html
+++ b/index.html
@@ -20,53 +20,67 @@
     </div>
 
     <ul>
-        <li class="card">
+        <li class="card first-pair card-1" onclick="TurnCard('.card-1')">
             <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/bobrossparrot.gif" alt="parrot bobross">
         </li>
-        <li class="card">
+        <li class="card first-pair card-2" onclick="TurnCard('.card-2')">
             <img src="images/front 6.png" alt="parrot card">
-        </li>
-
-        <li class="card">
-            <img src="images/front 6.png" alt="parrot card">
-        </li>
-        <li class="card">
-            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/bobrossparrot.gif" alt="parrot bobross">
         </li>
 
-        <li class="card">
+        <li class="card second-pair card-3" onclick="TurnCard('.card-3')">
             <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/explodyparrot.gif" alt="parrot explody">
         </li>
-        <li class="card">
+        <li class="card second-pair card-4 card-4" onclick="TurnCard('.card-4')">
             <img src="images/front 6.png" alt="parrot card">
-        </li>
-
-        <li class="card">
-            <img src="images/front 6.png" alt="parrot card">
-        </li>
-        <li class="card">
-            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/explodyparrot.gif" alt="parrot explody">
         </li>
 
-        <li class="card">
+        <li class="card third-pair card-5" onclick="TurnCard('.card-5')">
             <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/fiestaparrot.gif" alt="parrot fiesta">
         </li>
-        <li class="card">
+        <li class="card third-pair card-6" onclick="TurnCard('.card-6')">
             <img src="images/front 6.png" alt="parrot card">
-        </li>
-
-        <li class="card">
-            <img src="images/front 6.png" alt="parrot card">
-        </li>
-        <li class="card">
-            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/fiestaparrot.gif" alt="parrot fiesta">
         </li>
 
-        <li class="card">
+        <li class="card fourth-pair card-7" onclick="TurnCard('.card-7')">
             <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/metalparrot.gif" alt="parrot metal">
         </li>
-        <li class="card">
+        <li class="card fourth-pair card-8" onclick="TurnCard('.card-8')">
             <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/metalparrot.gif" alt="parrot metal">
+        </li>
+
+        <li class="card fifth-pair card-9" onclick="TurnCard('.card-9')">
+            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/revertitparrot.gif" alt="parrot revertit">
+        </li>
+        <li class="card fifth-pair card-10" onclick="TurnCard('.card-10')">
+            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/revertitparrot.gif" alt="parrot revertit">
+        </li>
+
+        <li class="card sixth-pair card-11" onclick="TurnCard('.card-11')">
+            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/tripletsparrot.gif" alt="parrot triplets">
+        </li>
+        <li class="card sixth-pair card-12" onclick="TurnCard('.card-12')">
+            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/tripletsparrot.gif" alt="parrot triplets">
+        </li>
+
+        <li class="card seventh-pair card-13" onclick="TurnCard('.card-13')">
+            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/unicornparrot.gif" alt="parrot unicorn">
+        </li>
+        <li class="card seventh-pair card-14" onclick="TurnCard('.card-14')">
+            <img src="images/front 6.png" alt="parrot card">
+            <img hidden src="images/unicornparrot.gif" alt="parrot unicorn">
         </li>
 
     </ul>
