--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <ul>
         <li class="card first-pair card-1" onclick="TurnCard('.card-1')">
             <img src="images/front 6.png" alt="parrot card">
-            <img hidden src="images/bobrossparrot.gif" alt="parrot bobross">
+            <!-- <img hidden src="images/bobrossparrot.gif" alt="parrot bobross"> -->
         </li>
         <li class="card first-pair card-2" onclick="TurnCard('.card-2')">
             <img src="images/front 6.png" alt="parrot card">
-            <img hidden src="images/bobrossparrot.gif" alt="parrot bobross">
+            <!-- <img hidden src="images/bobrossparrot.gif" alt="parrot bobross"> -->
         </li>
 
         <li class="card second-pair card-3" onclick="TurnCard('.card-3')">
