prompt renderizando as cartas na tela, sem function de virar

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     </div>
 
     <ul>
-        <li class="card first-pair card-1" onclick="TurnCard('.card-1')">
+        <!-- <li class="card first-pair card-1" onclick="TurnCard('.card-1')">
             <img src="images/front 6.png" alt="parrot card">
-            <!-- <img hidden src="images/bobrossparrot.gif" alt="parrot bobross"> -->
+            <img hidden src="images/bobrossparrot.gif" alt="parrot bobross">
         </li>
         <li class="card first-pair card-2" onclick="TurnCard('.card-2')">
-            <img src="images/front 6.png" alt="parrot card">
+            <img src="images/front 6.png" alt="parrot card"> -->
             <!-- <img hidden src="images/bobrossparrot.gif" alt="parrot bobross"> -->
-        </li>
+        <!-- </li>
 
         <li class="card second-pair card-3" onclick="TurnCard('.card-3')">
             <img src="images/front 6.png" alt="parrot card">
@@ -81,7 +81,7 @@
         <li class="card seventh-pair card-14" onclick="TurnCard('.card-14')">
             <img src="images/front 6.png" alt="parrot card">
             <img hidden src="images/unicornparrot.gif" alt="parrot unicorn">
-        </li>
+        </li> -->
 
     </ul>
 
